--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     </script>
 
     <p style="text-align: center; font-size:20; margin-left:auto; margin-right:auto; width:80%; text-align: justify;">
-        The sorted bar chart above show the total meals delivered by route. There are two dropdown bars that the user is able to interact with. The first dropdown allows the user to select whether to include the outlier "Shipped", which signifies meals delivered via UPS. Another dropdown allows the user to select the routes based on days of the week, which were used by Community Servings to categorize the routes. 
+        The sorted bar chart above show the total meals delivered by route. There are two dropdown bars that the user is able to interact with. The first dropdown allows the user to select whether to include the outlier "Shipped", which signifies meals delivered via UPS.For routes named “X”, if the contract type is Home Hospital, then the meals were delivered by the Community Servings Delivery Team. If contract type is Government or Philanthropic, then they were delivered by a volunteer. Another dropdown allows the user to select the routes based on days of the week, which were used by Community Servings to categorize the routes. 
         <br>
         <br>
         In addition, the color of the bars represent the average route distance by miles. This was calculated using
