--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <br>
         In addition, the color of the bars represent the average route distance by miles. This was calculated using
         the latitude and longitude of Community Servings and the delivery zip code coordinates. From this chart we can
-        see that the routes with the most meals delivered tend to be shorter, and vice versa. </p>
+        see that the routes with the most meals delivered tend to be farther, and vice versa. </p>
 
 
     <!-- THIRD VIS -->
